# arch

./: Cargo.toml  PKGBUILD  README.md  deploy.sh
.github/workflows/: ci.yml
src/: alpm_handle.rs  callbacks.rs  deploy_capture.rs  fakeroot_main.rs  journal.rs  main.rs  makepkg_main.rs  snapshot.rs
src/commands/: build.rs  depends.rs  files.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  verify.rs
src/deploy_capture/: tests.rs
src/makepkg/: archive.rs  main.rs  mtree.rs  pkginfo.rs
src/pkgbuild/: fakeroot.rs  mod.rs  mtree.rs  package.rs  parse.rs  pkginfo.rs  runner.rs  sandbox.rs  types.rs
tests/: build_test.rs
