[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
alpm = "5.0.0"
pacmanconf = "3.1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["user"] }
libsystemd = "0.7"
authd-escalate = { path = "../authd/escalate" }

# Package building
tar = "0.4"
zstd = "0.13"
flate2 = "1.0"
walkdir = "2.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "arch"
path = "src/main.rs"
