[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
alpm = "5.0.0"
pacmanconf = "3.1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["user", "ptrace", "process", "signal"] }
libsystemd = "0.7"
authd-escalate = { git = "https://github.com/Osso/authd" }
walkdir = "2"
jwalk = "0.8"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]

[[bin]]
name = "arch"
path = "src/main.rs"

[[bin]]
name = "arch-fakeroot"
path = "src/fakeroot_main.rs"

[[bin]]
name = "arch-makepkg"
path = "src/makepkg/main.rs"
